  window.
- Removed "Applications" configuration. jIRCii now uses Java's Desktop API to
  launch a URL.
- Removed "random servers" group from server connect dialog
- jIRCii is now friendly to the latest format of mIRC's servers.ini file
- Updated servers.ini to the latest from http://www.mirc.co.uk/servers.ini
- join/part messages in default theme now shows addresses
- /load can now load scripts distributed into the jerk.jar
- Removed black-listing of GTKLookAndFeel for Linux systems (set use Native L&F
  option to get it). After 7 years, it has matured enough to work with jIRCii
  [See Beta 15 notes].

Beta    45 release 22 Sept 09
====
- Fixed a bug preventing /list -gui window from being closed.  I couldn't
  let this one wait until the next release.
- Fixed tab command completion
- Upgraded to Sleep 2.1u4, several bug fixes and a few new features.  
- $mouse variable in on click/dclick events is now a java.awt.event.MouseEvent 
  object.  You can now call Java methods on this object if you need to.
- Ctrl+Tab now cycles jIRCii windows (similar to Ctrl+Right Arrow)
- fixed a bug with nick changes breaking jIRCii on InspIRCd servers
- jIRCii now supports ! and + channels.  Thanks creative IRCDs!  You're
  really innovating now.
- default script now shows channel part messages (when specified)

Beta    44 release 7 Aug 08
====
- updated scripting engine to Sleep 2.1-u2.5, over 50 logged improvements
  and feature changes.  If it doesn't break your script you are bound
  to like it.  Here are the compatability changes to watch out for:

  -- this release catches more syntax errors, beware this may affect you
  -- &indexOf now returns $null when no matches were found, check for
     this with the is operator i.e. if (indexOf($str, " ") is $null)
  -- &subarray was renamed to &sublist; &subarray still works just
     be aware that the docs will refer to &sublist

- replaced jIRCii Scripting PDF with a clean HTML version.  Thanks to
  Dan Fare for getting this started